ie11 fix for Box with flex options being vertically squashed.

--- a/src/scss/grommet-core/_objects.box.scss
+++ b/src/scss/grommet-core/_objects.box.scss
@@ -186,6 +186,11 @@
   flex: 1 1;
   //need to fix flexbox issue with min-width: auto for some tags
   min-width: 0;
+
+  // IE11 specific fix for box with flex option being squashed vertically
+  @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+    flex-basis: auto;
+  }
 }
 
 .#{$grommet-namespace}box--flex-off {
